--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -16,12 +16,15 @@ jobs:
 
     steps:
       - name: Checkout Git Source
-        uses: actions/checkout@v2
+        uses: actions/checkout@v5
 
       - name: Use Node.js
-        uses: actions/setup-node@v2
+        #uses: actions/setup-node@v2
+        uses: actions/setup-node@v6
         with:
-          node-version: "15"
+          #node-version: "15"
+          node-version: "22"
+          #node-version: "24"
 
       - name: Install Dependencies
         run: yarn install
