--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -39,15 +39,14 @@ jobs:
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
+
           git add .
           if git diff --cached --quiet; then
             echo "No changes to commit."
           else
             git commit -m "WeiboHotSearch real-time update"
           fi
-          git commit -m "WeiboHotSearch real-time update"
-
-    
+          exit 0
 
 
       - name: Push changes
