--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -5,7 +5,8 @@ on:
   workflow_dispatch:
   
   schedule:
-    - cron: "0 * * * *"
+    #- cron: "0 * * * *"      ##每小时整点执行一次
+    - cron: "*/10 * * * *"   ##每 10 分钟执行一次
 
 jobs:
   build:
