--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -4,9 +4,9 @@ on:
   repository_dispatch:
   workflow_dispatch:
   
-  schedule:
+  #schedule:
     #- cron: "0 * * * *"      ##每小时整点执行一次
-    - cron: "*/10 * * * *"   ##每 10 分钟执行一次
+    #- cron: "*/10 * * * *"   ##每 10 分钟执行一次
 
 jobs:
   build:
